# tokscale

./: .gitignore  CONTRIBUTING.md  Cargo.toml  PR_BODY.md  README.ja.md  README.ko.md  README.md  README.zh-cn.md
.github/workflows/: build-native.yml  publish-cli.yml  test_coverage.yml
crates/tokscale-cli/: Cargo.toml  build.rs
crates/tokscale-cli/src/: main.rs
crates/tokscale-cli/src/commands/: apple_fm.rs  mod.rs  report.rs  wrapped.rs
crates/tokscale-cli/src/commands/usage/: amp.rs  claude.rs  codex.rs  copilot.rs  helpers.rs  kimi.rs  minimax.rs  mod.rs  warp.rs  zai.rs
crates/tokscale-cli/src/tui/: app.rs  cache.rs  client_ui.rs  settings.rs
crates/tokscale-cli/src/tui/data/: mod.rs
crates/tokscale-cli/src/tui/ui/: agents.rs  daily.rs  footer.rs  hourly.rs  minutely.rs  mod.rs  models.rs  monthly.rs  usage.rs  widgets.rs
crates/tokscale-cli/tests/: cli_tests.rs
crates/tokscale-core/src/: aggregator.rs  clients.rs  lib.rs  message_cache.rs  model_alias.rs  provider_identity.rs  scanner.rs
crates/tokscale-core/src/pricing/: aliases.rs  custom.rs  lookup.rs  mod.rs
crates/tokscale-core/src/sessions/: antigravity.rs  antigravity_cli.rs  codex.rs  copilot.rs  devin.rs  gjc.rs  jcode.rs  kimi.rs  kiro.rs  micode.rs  mod.rs  pi.rs  roocode.rs  tencent_buddy.rs  workbuddy.rs  zcode.rs
crates/tokscale-core/tests/: jcode.rs
docs/: 9router-bridge.md
docs/providers/: sakana.md
scripts/: 9router_custom_pricing.json  9router_tokscale_bridge_gjc.py  check-release-workflow-safety.py  test-release-package-artifacts.sh  test-release-workflow-safety.sh  test_9router_tokscale_bridge_gjc.py
scripts/systemd/: 9router-tokscale-bridge.service  9router-tokscale-bridge.timer
(+1 files in other folders)
