[package]
name = "tokscale-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI and TUI for tokscale - AI token usage analytics"

[[bin]]
name = "tokscale"
path = "src/main.rs"

[features]
# Optional: native FFI into Apple's FoundationModels (on-device Apple Intelligence)
# for the `apple-fm` report summarizer backend. macOS-only; no-op elsewhere.
# NOT enabled by default — the default build degrades to a Rust heuristic.
apple-fm = []

[dependencies]
tokscale-core = { workspace = true }

clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rayon = { workspace = true }
arboard = { workspace = true }
reqwest = { workspace = true }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
resvg = "0.43"
usvg = "0.43"
hostname = "0.4"
qrcode = "0.14"
uuid = { version = "1.0", features = ["v4"] }
rpassword = "7.0"
sha2 = "0.10"
csv = "1.3"

# Trae iCubeAuthInfo decryption (Electron globalStorage)
aes = { workspace = true }
cbc = { workspace = true }
base64 = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
serial_test = "3.0"
